--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <!-- APP JS -->
     <script src="./app.js"></script>
 
+    <!-- DATA -->
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxzzXmrwjCfIMYG6tKQYyqMPxRqQ_qa8b1OPTLlZHvmsxFOF-Vrc2ivKsA6RWDv4jBTTw/exec'
         const form = document.forms['instagram']
